# indic-faker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/indic_faker/: __init__.py  core.py
src/indic_faker/data/: constants.py
src/indic_faker/data/addresses/: __init__.py  pincodes.py  places.py  states.py
src/indic_faker/data/finance/: __init__.py  banks.py  gst_codes.py
src/indic_faker/data/names/: __init__.py  bn.py  gu.py  hi.py  kn.py  ml.py  mr.py  ta.py  te.py
src/indic_faker/providers/: address.py  company.py  education.py  finance.py  id_numbers.py  job.py  misc.py  person.py  phone.py
tests/: test_address.py  test_finance.py  test_id_numbers.py  test_integration.py  test_person.py  test_phone.py
